fixed alignment on about us

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -151,7 +151,7 @@
 .locationInstructions {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     text-align: left;
     margin-left: 10%;
     font-family: 'Poppins', sans-serif;
